--- a/economic-theory-923-main/fitness.css
+++ b/economic-theory-923-main/fitness.css
@@ -169,3 +169,36 @@
     border-radius: 10px;
     border: none;
 }
+
+
+@media all and (min-width:480px) and (max-width:720px){
+    #fitness_container1{
+        margin-top: 2%;
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        gap:12px;
+    }
+    #fitness_container1 div{
+        width: 90%;
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        border: 0.5px solid grey;
+        border-radius: 10px;
+        padding: 3%;
+        box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    }
+}
+
+@media all and (min-width:320px) and (max-width:479px){
+    #container{
+     margin: auto;
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    width: 100%;
+    gap: 10px;
+    margin-top: 30px;
+    padding: 30px;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
+}
+}
