--- a/economic-theory-923-main/wellness.css
+++ b/economic-theory-923-main/wellness.css
@@ -288,3 +288,30 @@ body{
     box-shadow: none;
 
 }
+
+
+@media all and (min-width:480px) and (max-width:720px){
+    #product-filter-page-container{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        grid-template-rows: 350px;
+        gap:15px;
+        background-color: white;
+       
+    
+    }
+}
+
+
+@media all and (min-width:320px) and (max-width:479px){
+    #container{
+     margin: auto;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    width: 100%;
+    gap: 10px;
+    margin-top: 30px;
+    padding: 30px;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
+}
+}
